# QML_UI_Minimalist

./: .gitignore  AreaEdit.qml  Body.qml  BtnsPage.qml  CMakeLists.txt  CheckBtn.qml  CircleProgress.qml  ClickBtn.qml  EditPage.qml  LineEdit.qml  Main.qml  Pages.qml  ProgressesPage.qml  README.md  RadioBtnCombobox.qml  RippleProgress.qml  Sidebar.qml  SidebarItem.qml  SiderbarItem.qml  Skin.qml  SkinItem.qml  SkinPage.qml  SliderProgress.qml  SwitchBtn.qml  Table.qml  TablePage.qml  main.cpp  res.qrc
